export const snapshot = {};

snapshot[`Project View Command - Help Text 1`] = `
stdout:
"
Usage: view <projectIdOrSlug>

Description:

  View project details

Options:

  -h, --help  - Show this help.                     
  -w, --web   - Open in web browser                 
  -a, --app   - Open in Linear.app                  
  -j, --json  - Force machine-readable JSON output  
  --text      - Output human-readable text          

Examples:

  View a project as JSON         linear project view auth-refresh       
  View a project in the terminal linear project view auth-refresh --text
  Open a project in the browser  linear project view auth-refresh --web 

"
stderr:
""
`;

snapshot[`Project View Command - JSON Missing Project Reference 1`] = `
stdout:
'{
  "success": false,
  "error": {
    "type": "unknown_error",
    "message": "Missing argument(s): projectIdOrSlug",
    "suggestion": null,
    "context": "Failed to view project"
  }
}
'
stderr:
""
`;

snapshot[`Project View Command - With Project Details 1`] = `
stdout:
"# 🔐 Authentication System Redesign

**Slug:** auth-redesign-2024
**URL:** https://linear.app/acme/project/auth-redesign-2024
**Status:** In Progress
**Priority:** High
**Health:** onTrack
**Creator:** John Admin
**Lead:** Jane Lead
**Start Date:** 2024-01-15
**Target Date:** 2024-04-30
**Started At:** 1/16/2024
**Teams:** Backend Team (BACKEND), Security Team (SECURITY)

**Created:** 1/10/2024
**Updated:** 1/25/2024

## Description

Complete overhaul of the authentication system to improve security and user experience.

## Goals
- Implement OAuth 2.0 / OpenID Connect
- Add multi-factor authentication
- Improve password reset flow
- Add social login options

## Technical Requirements
- JWT tokens with proper rotation
- Rate limiting on auth endpoints
- Audit logging for security events
- GDPR compliance for user data

## Latest Update

**By:** Jane Lead
**When:** 1/22/2024
**Health:** onTrack

Great progress this week! The OAuth implementation is nearly complete and we're on track for our Q1 delivery. The team has been collaborating well across backend and security concerns.

**This week's highlights:**
- OAuth 2.0 flow implementation 80% complete
- MFA design reviews completed
- Security penetration testing scheduled

**Next week:**
- Complete OAuth testing
- Begin MFA implementation
- Finalize UI designs

## Issues Summary

**Total Issues:** 4
**Completed:** 1
**In Progress:** 1
**To Do:** 1
**Canceled:** 1
"
stderr:
""
`;

snapshot[`Project View Command - Minimal Project 1`] = `
stdout:
"# Simple Project

**Slug:** simple
**URL:** https://linear.app/acme/project/simple
**Status:** Backlog
**Priority:** None

**Created:** 1/20/2024
**Updated:** 1/20/2024
"
stderr:
""
`;

snapshot[`Project View Command - JSON Project Not Found 1`] = `
stdout:
'{
  "success": false,
  "error": {
    "type": "not_found",
    "message": "Project not found: missing-project",
    "suggestion": null,
    "context": "Failed to view project"
  }
}
'
stderr:
""
`;

snapshot[`Project View Command - JSON Output 1`] = `
stdout:
'{
  "id": "project-json-id",
  "slugId": "auth-redesign-2024",
  "name": "Authentication System Redesign",
  "description": "Complete overhaul of the authentication system to improve security and user experience.",
  "icon": "🔐",
  "color": "#3b82f6",
  "url": "https://linear.app/acme/project/auth-redesign-2024",
  "status": {
    "id": "status-started",
    "name": "In Progress",
    "color": "#f59e0b",
    "type": "started"
  },
  "creator": {
    "name": "john.admin",
    "displayName": "John Admin"
  },
  "lead": {
    "name": "jane.lead",
    "displayName": "Jane Lead"
  },
  "priority": 2,
  "health": "onTrack",
  "startDate": "2024-01-15",
  "targetDate": "2024-04-30",
  "startedAt": "2024-01-16T09:00:00Z",
  "completedAt": null,
  "canceledAt": null,
  "createdAt": "2024-01-10T10:00:00Z",
  "updatedAt": "2024-01-25T14:30:00Z",
  "teams": [
    {
      "id": "team-1",
      "key": "BACKEND",
      "name": "Backend Team"
    }
  ],
  "issueSummary": {
    "total": 3,
    "completed": 1,
    "started": 1,
    "unstarted": 1,
    "backlog": 0,
    "triage": 0,
    "canceled": 0
  },
  "lastUpdate": {
    "id": "update-1",
    "body": "OAuth implementation is nearly complete.",
    "health": "onTrack",
    "createdAt": "2024-01-22T16:00:00Z",
    "user": {
      "name": "jane.lead",
      "displayName": "Jane Lead"
    }
  }
}
'
stderr:
""
`;
